# dirB

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-publish.yml
dirB/: base.py  encryption.py  merge.py  utils.py
docs/: README-ack.md  conf.py  dirB.rst  index.rst  modules.rst  readme_link.md  requirements.in  requirements.txt
notebooks/: full_simplified_example.ipynb  zsan_DirB_ejemploJupyter-mod.ipynb
